# ResuME

./: README.md
agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/app/: agent.py  document.py  main.py  models.py
agent/tests/: test_document.py
backend/: README.md  pyproject.toml
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
job-search-api/: .env.example  .gitignore  README.md  app.db  main.py  pyproject.toml  requirements.txt  test_main.py
