[project]
name = "job-search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "jobspy>=0.31.0",
    "pandas>=2.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-jobspy>=1.1.82",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
