[project]
name = "job-search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.0",
    "pandas>=2.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "pypdf>=6.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8.0"]
